<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/graduation" />


    <TextView
        android:id="@+id/Alert"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="-60dp"
        android:elevation="8dp"
        android:gravity="center"
        android:text=""
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/FirstPlayerPart"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start"
        android:elevation="8dp">

        <TextView
            android:id="@+id/FirstPlayerName"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/logout_button"
            android:elevation="4dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/Infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/FirstPlayerName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/please_fill_in"
            android:textColor="#E91E63"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/EmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Infos"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/email_text"
            android:textColor="#000000"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/Email"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_below="@id/EmailText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/input"
            android:elevation="2dp"
            android:gravity="center"
            android:hint="@string/please_enter_your_email_here"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/password_text"
            android:textColor="#000000"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/Password"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_below="@id/PasswordText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:elevation="2dp"
            android:gravity="center"
            android:hint="@string/please_enter_your_password_here"
            android:inputType="textPassword"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/LogIn"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_below="@id/Password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/logout_button"
            android:elevation="4dp"
            android:text="@string/log_in_2"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="26sp" />

        <Button
            android:id="@+id/Forget"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_below="@id/LogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logout_button"
            android:elevation="4dp"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="26sp" />


    </RelativeLayout>


</RelativeLayout>